# iaaf_scoring

./: .gitignore  Cargo.toml  README.md
extractor/: extractor.py
resources/: compress_tables.sh
src/: error.rs  event.rs  gender.rs  lib.rs  main.rs  methods.rs  preformance.rs  tests.rs
src/event/: mod.rs  outdoor.rs
src/methods/: iaaf_2017_tables_outdoor.rs  mod.rs
